# zrr

./: CMakeLists.txt  README.md  README_smoke_detection.md  RKNN模型池学习总结.md  add_face.py  add_face_annotated.py  dect_meter.py  dect_meter_annotated.py  detection_config.py  encode.py  encode_annotated.py  fire.rknn  func_face.py  func_face_annotated.py  func_flame.py  func_flame_annotated.py  func_hardhat.py  func_meter.py  func_meter_annotated.py  func_smoke.py  func_smoke_hat.py  func_v7.py  func_v7_annotated.py  func函数模块学习总结.md  helmet.rknn  infrared_camera.py  infrared_camera_annotated.py  main.cpp  main.py  main_analysis_summary.md  main_annotated.py  main_annotated_part1.py  main_annotated_part2.py  main_annotated_part3.py  maincopy.py  multi_task_detection.py  name_to_image_map.txt  name_to_image_map_backup.txt  read_meter.py  requirements.txt  (+40 more)
include/: errorNum.hpp  netWorkBase.hpp  tcpUdp.hpp
model_data/: mobilenet_face_encoding.npy  mobilenet_names.npy  retinaface_mob.rknn
src/: networkBase.cpp  tcpUdp.cpp
